--- a/style.css
+++ b/style.css
@@ -4,5 +4,6 @@ body {
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     padding: 0;
     margin: 0;
+    top: 0;
 }
 
